--- a/vc-env/env/command-srv-test.yml
+++ b/vc-env/env/command-srv-test.yml
@@ -38,8 +38,8 @@ druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
     url: jdbc:mysql://10.132.27.108:3306/vc_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-    username: zkj_user
-    password: kANXZYqf2UzghVY7DnjP
+    username: alpha_user
+    password: 3CvQMOiJFihcVnOLOw6J
   initialSize: 2
   maxActive: 4
   maxIdle: 2
