--- a/vc-env/env/gateway-808-srv-test.yml
+++ b/vc-env/env/gateway-808-srv-test.yml
@@ -11,10 +11,10 @@ spring:
       maxWait: -1
   data:
     mongodb:
-      host: 114.55.24.97
+      host: 10.24.24.241
       port: 3717
-      username: zkj_user
-      password: zkj2017
+      username: dba_user
+      password: office_97
       database: history
       authenticationDatabase: history
 dubbo:
@@ -23,14 +23,14 @@ dubbo:
   application:
     name: gateway-808-srv
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: 10.122.72.180:2181,10.122.72.180:2182,10.122.72.180:2183
     protocol: zookeeper
-    port: 20660
+    port: 20665
   protocol:
     name: dubbo
     threads: 100
     #host: 10.0.10.96
-    port: 20660
+    port: 20665
   provider:
     timeout: 120000
     retries: -1
@@ -73,9 +73,9 @@ mqttAliyun:
 druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
-    url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-    username: zkj_user
-    password: kANXZYqf2UzghVY7DnjP
+    url: jdbc:mysql://10.132.27.108:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    username: alpha_user
+    password: 3CvQMOiJFihcVnOLOw6J
   initialSize: 2
   maxActive: 4
   maxIdle: 2
