--- a/vc-env/env/gateway-mqtt-srv-test.yml
+++ b/vc-env/env/gateway-mqtt-srv-test.yml
@@ -5,16 +5,16 @@ dubbo:
   scan:
     annotationPackage: com.ccclubs.gateway
   application:
-    name: srv
+    name: gateway-mqtt-srv-test
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: 10.122.72.180:2181,10.122.72.180:2182,10.122.72.180:2183
     protocol: zookeeper
-    port: 21001
+    port: 20666
   protocol:
     name: dubbo
     threads: 100
     #host: 10.0.10.96
-    port: 20880
+    port: 20666
   provider:
     timeout: 120000
     retries: -1
