--- a/vc-env/env/command-srv-test.yml
+++ b/vc-env/env/command-srv-test.yml
@@ -17,16 +17,16 @@ dubbo:
   scan:
     annotationPackage: com.ccclubs.command,com.ccclubs.frm.mongodb,com.ccclubs.frm.redis,com.ccclubs.mongodb,com.ccclubs.common
   application:
-    name: command-srv
+    name: command-srv-test
   registry:
     address: 10.122.72.180:2181,10.122.72.180:2182,10.122.72.180:2183
     protocol: zookeeper
-    port: 20880
+    port: 20663
   protocol:
     name: dubbo
     threads: 100
     #host: 10.0.10.96
-    port: 20880
+    port: 20663
   provider:
     timeout: 120000
     retries: -1
