--- a/vc-env/env/command-api-test.yml
+++ b/vc-env/env/command-api-test.yml
@@ -11,7 +11,7 @@ dubbo:
   scan: 
     annotationPackage: com.ccclubs.command.api,com.ccclubs.frm.spring
   application:
-    name: command-api
+    name: command-api-test
   registry:
     address: 10.122.72.180:2181,10.122.72.180:2182,10.122.72.180:2183
     protocol: zookeeper
@@ -20,7 +20,7 @@ dubbo:
     name: dubbo
     threads: 100
     #host: 10.0.10.96
-    port: 20661
+    port: 20664
   provider:
     timeout: 120000
     retries: -1
