--- a/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
@@ -12,7 +12,8 @@ spring:
           #是否暴露加解密接口
           enabled: true
         git:
-          uri: http://120.26.220.241/zhangkejiang/vc.git
+          #uri: http://120.26.220.241/zhangkejiang/vc.git
+          uri: http://120.26.220.241/BurningGroup/vc.git
           searchPaths:  vc-env/env
           username: zhangkejiang
           password: ss123456
