Command API Rate Limite

--- a/vc-env/env/command-api-dev.yml
+++ b/vc-env/env/command-api-dev.yml
@@ -6,7 +6,9 @@ spring:
       charset: UTF-8
       enable: true
       force: true
-name: zkj
+  redis:
+    host: 127.0.0.1
+
 dubbo:
   scan: 
     annotationPackage: com.ccclubs.command.api,com.ccclubs.frm.spring
