--- a/vc-web/vc-web-command-api/pom.xml
+++ b/vc-web/vc-web-command-api/pom.xml
@@ -57,6 +57,11 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-redis</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-test</artifactId>
             <version>${frm.version}</version>
             <scope>test</scope>
