--- a/vc-env/env/gateway-808-srv-dev.yml
+++ b/vc-env/env/gateway-808-srv-dev.yml
@@ -3,14 +3,7 @@ server:
 
 spring:
   redis:
-    host: r-bp10b96658d427c4.redis.rds.aliyuncs.com
-    password: zgjrB7aUk83plwCpyrEk
-    database: 7
-    pool:
-      maxIdle: 8
-      minIdle: 0
-      maxActive: 64
-      maxWait: -1
+    host: 127.0.0.1
   data:
     mongodb:
       host: 114.55.24.97
