--- a/vc-biz/vc-biz-quota-srv/pom.xml
+++ b/vc-biz/vc-biz-quota-srv/pom.xml
@@ -56,5 +56,16 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 		</dependency>
+	  <dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi</artifactId>
+		  <version>3.13</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.poi</groupId>
+		  <artifactId>poi-ooxml</artifactId>
+		  <version>3.9</version>
+	  </dependency>
+
 	</dependencies>
 </project>
