force cmd engine / rule engine config

--- a/vc-env/env/cmd-engine-srv-test.yml
+++ b/vc-env/env/cmd-engine-srv-test.yml
@@ -34,8 +34,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 
 #MQ topic
 mq:
