--- a/vc-env/env/rule-engine-srv-test.yml
+++ b/vc-env/env/rule-engine-srv-test.yml
@@ -39,8 +39,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 
 #MQ topic
 mq:
