--- a/vc-env/env/vtsearch-api-test.yml
+++ b/vc-env/env/vtsearch-api-test.yml
@@ -27,8 +27,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 #appId&appKey
 api:
   security:
