--- a/vc-env/env/command-api-test.yml
+++ b/vc-env/env/command-api-test.yml
@@ -29,8 +29,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 #appId&appKey
 api:
   security:
