--- a/vc-env/env/gateway-808-srv-dev.yml
+++ b/vc-env/env/gateway-808-srv-dev.yml
@@ -33,8 +33,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 #jt808网关转发到MQ的topic
 mq:
   topic: ser
