--- a/vc-env/env/gateway-gb-srv-test.yml
+++ b/vc-env/env/gateway-gb-srv-test.yml
@@ -18,8 +18,8 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 #国标网关转发到MQ的topic
 mq:
   topic: ser
