--- a/vc-env/env/protocol-srv-test.yml
+++ b/vc-env/env/protocol-srv-test.yml
@@ -33,8 +33,8 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
