--- a/vc-env/env/usr-srv-test.yml
+++ b/vc-env/env/usr-srv-test.yml
@@ -33,8 +33,8 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-  monitor:
-    protocol: registry
+#  monitor:
+#    protocol: registry
 
 druid:
   driver: com.mysql.jdbc.Driver
