--- a/vc-env/env/gateway-808-srv-test.yml
+++ b/vc-env/env/gateway-808-srv-test.yml
@@ -13,7 +13,7 @@ spring:
     mongodb:
       host: 10.24.24.241
       port: 3717
-      username: dba_user
+      username: dba
       password: office_97
       database: vc_history
       authenticationDatabase: vc_history
