--- a/vc-env/env/gateway-808-srv-test.yml
+++ b/vc-env/env/gateway-808-srv-test.yml
@@ -41,7 +41,7 @@ dubbo:
 #    protocol: registry
 #jt808网关转发到MQ的topic
 mq:
-  topic: ser
+  topic: ser_test
 #jt808网关监听的端口
 jt808Server:
   port: 26700
