--- a/vc-web/vc-web-quota-api/pom.xml
+++ b/vc-web/vc-web-quota-api/pom.xml
@@ -62,7 +62,18 @@
 			<artifactId>pagehelper</artifactId>
 		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
+
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
