--- a/vc-env/env/command-api-prod.yml
+++ b/vc-env/env/command-api-prod.yml
@@ -17,7 +17,7 @@ spring:
       maxWait: -1
 dubbo:
   scan: 
-    annotationPackage: com.ccclubs.command.api,com.ccclubs.frm.spring
+    annotationPackage: com.ccclubs
   application:
     name: command-api
   registry:
