--- a/vc-env/env/command-srv-test.yml
+++ b/vc-env/env/command-srv-test.yml
@@ -15,7 +15,7 @@ spring:
       authenticationDatabase: vc_remote
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.command,com.ccclubs.frm.mongodb,com.ccclubs.frm.redis,com.ccclubs.mongo,com.ccclubs.common
+    annotationPackage: com.ccclubs
   application:
     name: command-srv-test
   registry:
