--- a/vc-env/env/gateway-gb-srv-dev.yml
+++ b/vc-env/env/gateway-gb-srv-dev.yml
@@ -3,9 +3,9 @@ server:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.gateway
+    annotationPackage: com.ccclubs
   application:
-    name: srv
+    name: gateway-gb-srv
   registry:
     address: zookeeper://127.0.0.1:2181
     protocol: zookeeper
@@ -18,6 +18,9 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
+  consumer:
+    timeout: 120000
+    check: false
 #  monitor:
 #    protocol: registry
 #国标网关转发到MQ的topic
