--- a/vc-env/env/vtsearch-api-dev.yml
+++ b/vc-env/env/vtsearch-api-dev.yml
@@ -9,7 +9,7 @@ spring:
 
 dubbo:
   scan: 
-    annotationPackage: com.ccclubs.vtsearch.api,com.ccclubs.frm.spring
+    annotationPackage: com.ccclubs
   application:
     name: vtsearch-api
   registry:
