--- a/vc-env/env/cmd-engine-srv-dev.yml
+++ b/vc-env/env/cmd-engine-srv-dev.yml
@@ -15,7 +15,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.engine,com.ccclubs.frm.redis,com.ccclubs.frm.ons,com.ccclubs.frm.mongodb,com.ccclubs.mongo,com.ccclubs.common
+    annotationPackage: com.ccclubs
   application:
     name: cmd-engine-srv
   registry:
