--- a/vc-env/env/command-srv-dev.yml
+++ b/vc-env/env/command-srv-dev.yml
@@ -14,7 +14,7 @@ spring:
       authenticationDatabase: history
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.command,com.ccclubs.frm.mongodb,com.ccclubs.frm.redis,com.ccclubs.mongo,com.ccclubs.common
+    annotationPackage: com.ccclubs
   application:
     name: command-srv
   registry:
