--- a/vc-env/env/gateway-808-srv-dev.yml
+++ b/vc-env/env/gateway-808-srv-dev.yml
@@ -15,7 +15,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.gateway ,com.ccclubs.frm.mongodb,com.ccclubs.mongo,com.ccclubs.common
+    annotationPackage: com.ccclubs
   application:
     name: gateway-808-srv
   registry:
