--- a/vc-env/env/gateway-gb-srv-test.yml
+++ b/vc-env/env/gateway-gb-srv-test.yml
@@ -3,7 +3,7 @@ server:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.gateway
+    annotationPackage: com.ccclubs
   application:
     name: gateway-gb-srv
   registry:
