--- a/vc-env/env/gateway-mqtt-srv-test.yml
+++ b/vc-env/env/gateway-mqtt-srv-test.yml
@@ -3,7 +3,7 @@ server:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.gateway
+    annotationPackage: com.ccclubs
   application:
     name: gateway-mqtt-srv-test
   registry:
@@ -18,6 +18,9 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
+  consumer:
+    timeout: 120000
+    check: false
 #  monitor:
 #    protocol: registry
 
