--- a/vc-env/env/hbase-srv-dev.yml
+++ b/vc-env/env/hbase-srv-dev.yml
@@ -8,7 +8,7 @@ hbase:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.hbase.inf
+    annotationPackage: com.ccclubs
   application:
     name: srv
   registry:
@@ -22,6 +22,8 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
-
+  consumer:
+    timeout: 120000
+    check: false
 
 
