--- a/vc-env/env/protocol-srv-dev.yml
+++ b/vc-env/env/protocol-srv-dev.yml
@@ -18,7 +18,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.protocol
+    annotationPackage: com.ccclubs
   application:
     name: srv
   registry:
@@ -33,6 +33,9 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
+  consumer:
+    timeout: 120000
+    check: false
   monitor:
     protocol: registry
 druid:
