--- a/vc-env/env/protocol-srv-prod.yml
+++ b/vc-env/env/protocol-srv-prod.yml
@@ -18,7 +18,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.demo.cache,com.ccclubs.demo.inf,com.ccclubs.demo.inf.impl,com.ccclubs.demo.mono
+    annotationPackage: com.ccclubs
   application:
     name: srv
   registry:
@@ -33,6 +33,9 @@ dubbo:
   provider:
     timeout: 120000
     retries: -1
+  consumer:
+    timeout: 120000
+    check: false
   monitor:
     protocol: registry
 druid:
