--- a/vc-env/env/quota-api-dev.yml
+++ b/vc-env/env/quota-api-dev.yml
@@ -14,7 +14,7 @@ api:
 
 dubbo:
   scan: 
-    annotationPackage: com.ccclubs.quota.api,com.ccclubs.frm.spring
+    annotationPackage: com.ccclubs
   application:
     name: api
   registry:
