--- a/vc-env/env/rule-engine-srv-test.yml
+++ b/vc-env/env/rule-engine-srv-test.yml
@@ -21,7 +21,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.engine,com.ccclubs.frm.redis,com.ccclubs.frm.mqtt,com.ccclubs.frm.ons,com.ccclubs.frm.mongodb,com.ccclubs.mongo,com.ccclubs.common
+    annotationPackage: com.ccclubs
   application:
     name: rule-engine-srv-test
   registry:
