--- a/vc-env/env/upgrade-api-dev.yml
+++ b/vc-env/env/upgrade-api-dev.yml
@@ -9,7 +9,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.upgrade.api,com.ccclubs.frm.spring
+    annotationPackage: com.ccclubs
   application:
     name: upgrade-api
   registry:
