--- a/vc-env/env/usr-srv-dev.yml
+++ b/vc-env/env/usr-srv-dev.yml
@@ -15,7 +15,7 @@ spring:
       
 dubbo:
   scan: 
-    annotationPackage: com.ccclubs.usr,com.ccclubs.frm.redis,com.ccclubs.frm.mongodb,com.ccclubs.mongo
+    annotationPackage: com.ccclubs
   application:
     name: usr-srv
   registry:
