--- a/vc-env/env/vtsearch-srv-dev.yml
+++ b/vc-env/env/vtsearch-srv-dev.yml
@@ -14,7 +14,7 @@ spring:
       authenticationDatabase: history
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.vehicle,com.ccclubs.terminal,com.ccclubs.frm.redis,com.ccclubs.common,com.ccclubs.frm.mongodb,com.ccclubs.mongo
+    annotationPackage: com.ccclubs
   application:
     name: vtsearch-srv
   registry:
