--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,8 @@
 		<guava.version>18.0</guava.version>
 		<jackson.version>2.8.7</jackson.version>
 		<janino.version>3.0.6</janino.version>
+		<!-- JWT -->
+		<jjwt.version>0.7.0</jjwt.version>
 	</properties>
 	<build>
 		<plugins>
@@ -367,6 +369,12 @@
 				<groupId>org.codehaus.janino</groupId>
 				<artifactId>janino</artifactId>
 				<version>${janino.version}</version>
+			</dependency>
+			<!-- JWT -->
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt</artifactId>
+				<version>${jjwt.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
