--- a/vc-biz/vc-biz-usr-orm/pom.xml
+++ b/vc-biz/vc-biz-usr-orm/pom.xml
@@ -12,6 +12,7 @@
 			<groupId>www.ccclubs</groupId>
 			<artifactId>vc-frm-mybatis</artifactId>
 			<version>${frm.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
