执法模块完善

--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -33,5 +33,6 @@
         <module>vc-biz-quota-srv</module>
         <module>vc-biz-hbase-inf</module>
         <module>vc-biz-hbase-srv</module>
+        <module>vc-biz-olap-orm</module>
     </modules>
 </project>
