--- a/vc-biz/vc-biz-mongo-inf/pom.xml
+++ b/vc-biz/vc-biz-mongo-inf/pom.xml
@@ -19,6 +19,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-pub-orm</artifactId>
+            <version>${biz.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
