--- a/vc-biz/vc-biz-message/vc-biz-rule-engine-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-rule-engine-srv/pom.xml
@@ -76,6 +76,15 @@
             <artifactId>vc-biz-engine-core</artifactId>
             <version>${biz.version}</version>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-hbase-inf</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
