--- a/vc-frm/vc-frm-redis/pom.xml
+++ b/vc-frm/vc-frm-redis/pom.xml
@@ -29,5 +29,10 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>${hessian.version}</version>
+		</dependency>
 	</dependencies>
 </project>
