--- a/vc-env/env/rule-engine-srv-dev.yml
+++ b/vc-env/env/rule-engine-srv-dev.yml
@@ -3,7 +3,14 @@ server:
 
 spring:
   redis:
-    host: 127.0.0.1
+    #host: 127.0.0.1
+    host: 118.178.229.234
+    database: 7
+    pool:
+      maxIdle: 10
+      minIdle: 2
+      maxActive: 64
+      maxWait: -1
   data:
     mongodb:
       host: 114.55.24.97
@@ -12,6 +19,31 @@ spring:
       password: zkj2017
       database: history
       authenticationDatabase: history
+
+ccclubs:
+  data:
+    mongodb:
+          #国标mongodb配置
+          gbstandard:
+            host: 114.55.24.97
+            port: 3717
+            username: zkj_user
+            password: zkj2017
+            database: history
+            authenticationDatabase: history
+    #批量任务配置
+    batch:
+      #批量更新单次最大值，最大间隔时间，线程池数量，队列最大长度
+      updateBatchSize: 1000
+      updateMaxDurTime: 3000
+      updateThreads: 20
+      updateQueueMax: 50000
+      #批量写入mongodb单次最大值，最大间隔时间，线程池数量，队列最大长度
+      mongoInsertBatchSize: 2000
+      mongoInsertMaxDurTime: 10000
+      mongoInsertThreads: 20
+      mongoInsertQueueMax: 200000
+
 
 dubbo:
   scan:
@@ -72,7 +104,7 @@ mqttAliyun:
 
 mqttOwn:
   #自有 mqtt broker 地址
-  host: tcp://10.252.93.25
+  host: tcp://120.26.109.248
   #阿里云 mqtt broker 端口
   port: 27736
   #自有 mqClient ID 前缀
@@ -81,13 +113,17 @@ mqttOwn:
   userName: qsxiaogang
   #密码
   pwd: 513387369
+  #订阅主题
+  #subTopic: ser/car/jhz/rt_0/T1232054/#,ser/car/jhz/rt_0/GB006443/#
+  subTopic: ser/car/jhz/rt_0/#,
   #是否记录上行记录
   logUpDown: true
 
 druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
-    url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    #url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    url: jdbc:mysql://121.199.49.206:3306/vc_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
     username: zkj_user
     password: kANXZYqf2UzghVY7DnjP
   initialSize: 2
