1、远程控制添加业务日志； 2、长安出行测试，推送数据变更为JSON结构

--- a/vc-biz/vc-biz-command-srv/pom.xml
+++ b/vc-biz/vc-biz-command-srv/pom.xml
@@ -66,6 +66,10 @@
             <artifactId>vc-biz-common-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+      </dependency>
     </dependencies>
 
 </project>
