--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -9,6 +9,10 @@
     <artifactId>vc-biz</artifactId>
     <packaging>pom</packaging>
     <modules>
+        <module>vc-biz-manage-orm</module>
+        <module>vc-biz-manage-inf</module>
+        <module>vc-biz-manage-srv</module>
+
         <module>vc-biz-demo-inf</module>
         <module>vc-biz-demo-srv</module>
         <module>vc-biz-demo-orm</module>
