ev_manage合并完成，部分代码调整到dubbo方式。依赖清理。

--- a/vc-biz/vc-biz-manage-orm/pom.xml
+++ b/vc-biz/vc-biz-manage-orm/pom.xml
@@ -21,7 +21,8 @@
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-mybatis</artifactId>
-            <version>1.0.0</version>
+            <version>${frm.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
