--- a/vc-env/env/manage-api-dev.yml
+++ b/vc-env/env/manage-api-dev.yml
@@ -10,7 +10,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs
+    annotationPackage: com.ccclubs.manage.api
   application:
     name: api
   registry:
@@ -22,9 +22,14 @@ dubbo:
     threads: 100
     #host: 10.0.10.96
     port: 20660
+  provider:
+    timeout: 120000
+    retries: -1
   consumer:
     timeout: 120000
     check: false
+  monitor:
+    protocol: registry
 
 
 
