--- a/vc-web/vc-web-manage-api/pom.xml
+++ b/vc-web/vc-web-manage-api/pom.xml
@@ -14,59 +14,46 @@
 
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-core</artifactId>
+            <artifactId>vc-frm-token</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-manage-srv</artifactId>
+            <artifactId>vc-frm-core</artifactId>
             <version>1.0.0</version>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.8.RELEASE</version>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-manage-inf</artifactId>
+            <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
+
+
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-swagger</artifactId>
             <version>1.0.0</version>
         </dependency>
+
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-dubbox</artifactId>
             <version>${frm.version}</version>
         </dependency>
-        <dependency>
-            <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-spring</artifactId>
-            <version>${frm.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
+
+
+
+
+
         <!-- 统一配置客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
         </dependency>
 
     </dependencies>
