--- a/vc-web/vc-web-manage-srv/pom.xml
+++ b/vc-web/vc-web-manage-srv/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
+        <!--<dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-mybatis</artifactId>
+            <version>${frm.version}</version>
+        </dependency>-->
+
     </dependencies>
 
     <build>
