修改pom和yml的配置疏漏

--- a/vc-env/env/manage-api-dev.yml
+++ b/vc-env/env/manage-api-dev.yml
@@ -10,7 +10,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.manage.api
+    annotationPackage: com.ccclubs.manage.api,com.ccclubs.jwt
   application:
     name: api
   registry:
