--- a/vc-web/vc-web-manage-srv/pom.xml
+++ b/vc-web/vc-web-manage-srv/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-mybatis</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <!--<dependency>
             <groupId>www.ccclubs</groupId>
