--- a/vc-frm/vc-frm-mybatis/pom.xml
+++ b/vc-frm/vc-frm-mybatis/pom.xml
@@ -18,6 +18,11 @@
 	<dependencies>
 		<!-- spring boot mybatis -->
 		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>1.1.5</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 		</dependency>
