--- a/vc-frm/vc-frm-token/pom.xml
+++ b/vc-frm/vc-frm-token/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>spring-boot-starter-tomcat</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-redis</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
