--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -35,8 +35,9 @@
         <module>vc-biz-quota-orm</module>
         <module>vc-biz-quota-inf</module>
         <module>vc-biz-quota-srv</module>
-        <module>vc-biz-hbase-inf</module>
-        <module>vc-biz-hbase-srv</module>
         <module>vc-biz-olap-orm</module>
+        <module>vc-biz-phoenix-orm</module>
+        <module>vc-biz-phoenix-inf</module>
+        <module>vc-biz-phoenix-srv</module>
     </modules>
 </project>
