--- a/vc-web/pom.xml
+++ b/vc-web/pom.xml
@@ -25,11 +25,10 @@
 		<module>vc-web-protocol-srv</module>
 		<module>vc-web-quota-api</module>
 		<module>vc-web-quota-srv</module>
-		<module>vc-web-hbase-srv</module>
-        <module>vc-web-hbase-api</module>
         <module>vc-web-front</module>
-    </modules>
 		<module>vc-web-manage-srv</module>
+        <module>vc-web-phoenix-api</module>
+		<module>vc-web-phoenix-srv</module>
 	</modules>
 	<dependencies>
 		<dependency>
