--- a/vc-biz/vc-biz-phoenix-srv/pom.xml
+++ b/vc-biz/vc-biz-phoenix-srv/pom.xml
@@ -22,8 +22,14 @@
             <artifactId>commons-beanutils</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>dubbox</artifactId>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-dubbox</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-spring</artifactId>
+            <version>${frm.version}</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
