--- a/vc-env/env/phoenix-srv-dev.yml
+++ b/vc-env/env/phoenix-srv-dev.yml
@@ -31,3 +31,24 @@ dubbo:
     check: false
   monitor:
     protocol: registry
+
+
+
+druid:
+  driver: com.mysql.jdbc.Driver
+  jdbc:
+    url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    username: zkj_user
+    password: kANXZYqf2UzghVY7DnjP
+  initialSize: 2
+  maxActive: 4
+  maxIdle: 2
+  minIdle: 1
+  maxWait: 60000
+  timeBetweenEvictionRunsMillis: 3000
+  minEvictableIdleTimeMillis: 300000
+  maxPoolPreparedStatementPerConnectionSize: 20
+
+mybatis:
+  scan:
+    basePackage: com.ccclubs.**.mapper
