--- a/vc-web/vc-web-phoenix-srv/pom.xml
+++ b/vc-web/vc-web-phoenix-srv/pom.xml
@@ -33,6 +33,24 @@
             <artifactId>vc-frm-phoenix</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-logger</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-manage-srv</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-mybatis</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
