--- a/vc-env/env/phoenix-api-dev.yml
+++ b/vc-env/env/phoenix-api-dev.yml
@@ -3,7 +3,7 @@ server:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.phoenix.api
+    annotationPackage: com.ccclubs.phoenix.api,com.ccclubs.frm.spring
   application:
     name: api
   registry:
@@ -18,7 +18,11 @@ dubbo:
   consumer:
     timeout: 120000
     check: false
-
+  monitor:
+    protocol: registry
+  provider:
+      timeout: 120000
+      retries: -1
 
 spring:
   http:
