将车机号查询替换到common。

--- a/vc-env/env/phoenix-srv-dev.yml
+++ b/vc-env/env/phoenix-srv-dev.yml
@@ -11,7 +11,7 @@ spring:
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs.phoenix,com.ccclubs.manage.impl
+    annotationPackage: com.ccclubs.phoenix
   application:
     name: srv
   registry:
