--- a/vc-biz/vc-biz-phoenix-srv/pom.xml
+++ b/vc-biz/vc-biz-phoenix-srv/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>vc-frm-core</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-common-srv</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 
