--- a/vc-frm/vc-frm-phoenix/pom.xml
+++ b/vc-frm/vc-frm-phoenix/pom.xml
@@ -39,6 +39,10 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>log4j-over-slf4j</artifactId>
                 </exclusion>
+                <exclusion>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>servlet-api-2.5</artifactId>
+            </exclusion>
             </exclusions>
         </dependency>
 
