--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-808-srv/pom.xml
@@ -39,6 +39,12 @@
 
     <dependency>
       <groupId>www.ccclubs</groupId>
+      <artifactId>vc-biz-mongo-srv</artifactId>
+      <version>${biz.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>www.ccclubs</groupId>
       <artifactId>vc-biz-pub-orm</artifactId>
       <version>${biz.version}</version>
     </dependency>
