--- a/vc-biz/vc-biz-vehicle-srv/pom.xml
+++ b/vc-biz/vc-biz-vehicle-srv/pom.xml
@@ -24,6 +24,11 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-mongo-srv</artifactId>
+            <version>${biz.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-common-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
