--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -37,5 +37,6 @@
         <module>vc-biz-phoenix-orm</module>
         <module>vc-biz-phoenix-inf</module>
         <module>vc-biz-phoenix-srv</module>
+        <module>vc-biz-mongo-srv</module>
     </modules>
 </project>
