--- a/vc-biz/vc-biz-message/vc-biz-cmd-engine-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-cmd-engine-srv/pom.xml
@@ -28,6 +28,11 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-mongo-srv</artifactId>
+            <version>${biz.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-redis</artifactId>
             <version>${frm.version}</version>
         </dependency>
