--- a/vc-biz/vc-biz-mongo-srv/pom.xml
+++ b/vc-biz/vc-biz-mongo-srv/pom.xml
@@ -9,44 +9,31 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>vc-biz-phoenix-srv</artifactId>
+
 
     <dependencies>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-phoenix-inf</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-dubbox</artifactId>
+            <artifactId>vc-frm-mongodb</artifactId>
             <version>${frm.version}</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-spring</artifactId>
+            <artifactId>vc-frm-cache</artifactId>
             <version>${frm.version}</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-phoenix</artifactId>
-            <version>${frm.version}</version>
+            <artifactId>vc-biz-pub-orm</artifactId>
+            <version>${biz.version}</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-core</artifactId>
-            <version>${frm.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-common-srv</artifactId>
+            <artifactId>vc-biz-mongo-orm</artifactId>
             <version>${biz.version}</version>
         </dependency>
     </dependencies>
+    <artifactId>vc-biz-mongo-srv</artifactId>
 
 
 </project>
