添加重复依赖

--- a/vc-web/vc-web-phoenix-srv/pom.xml
+++ b/vc-web/vc-web-phoenix-srv/pom.xml
@@ -29,7 +29,11 @@
             <version>${biz.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-phoenix</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>www.ccclubs</groupId>
