--- a/vc-biz/vc-biz-phoenix-srv/pom.xml
+++ b/vc-biz/vc-biz-phoenix-srv/pom.xml
@@ -23,6 +23,16 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-dubbox</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-spring</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-phoenix</artifactId>
             <version>${frm.version}</version>
         </dependency>
