添加众泰主机厂追溯系统车辆推送功能。

--- a/vc-biz/vc-biz-vehicle-srv/pom.xml
+++ b/vc-biz/vc-biz-vehicle-srv/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-protocol-inf</artifactId>
+            <version>${biz.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-redis</artifactId>
             <version>${frm.version}</version>
         </dependency>
@@ -55,6 +60,11 @@
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-spring</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-logger</artifactId>
             <version>${frm.version}</version>
         </dependency>
     </dependencies>
