--- a/vc-frm/vc-frm-dubbox/pom.xml
+++ b/vc-frm/vc-frm-dubbox/pom.xml
@@ -46,7 +46,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>javassist</groupId>
+			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 		</dependency>
 		<dependency>
