解决冲突，manage项目三个模块提交

--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -10,6 +10,9 @@
     <packaging>pom</packaging>
     <modules>
 
+        <module>vc-biz-manage-inf</module>
+        <module>vc-biz-manage-orm</module>
+        <module>vc-biz-manage-srv</module>
 
         <module>vc-biz-demo-inf</module>
         <module>vc-biz-demo-srv</module>
